<resources>
    <string name="app_name">EasyPeasy</string>
    <string name="google_login_client_id">545692381135-fvhedorrsrtfdk6q7si4hid5l3j0lu0v.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id">easy_peasy_channel</string>

    <!-- SignFragment -->
    <string name="sign_with_google">Google 계정으로 가입</string>
    <string name="sign_info"><b>자주 사용하는 이메일과 동일한 계정</b>"으로 가입하세요.&#10;더욱 빠르게 환경을 지킬 수 있습니다."</string>

    <!-- SignPlantFragment -->
    <string name="sign_plant_finish">선택 완료</string>
    <string name="sign_plant_make_character">내 캐릭터 만들기</string>
    <string name="sign_plant_choose_character">키울 식물을 골라주세요</string>
    <string name="sing_plant_naming">이름을 지어주세요</string>
    <string name="sing_plant_name_input">캐릭터 이름 적는 칸</string>
    
    <!-- OnBoardingBottomSheetFragment -->
    <string name="on_boarding_description_first">메일함 관리 버튼을 클릭해\n메일을 삭제해주세요</string>
    <string name="on_boarding_description_second">메일을 지울수록\n식물이 쑥쑥 자라나요</string>
    <string name="on_boarding_description_third">다 자란 식물은 교환할 수 있어요\n실제 집에서 키워보세요!</string>
    <string name="on_boarding_button_next">NEXT</string>
    <string name="on_boarding_button_close">CLOSE</string>

    <!-- MainFragment -->
    <string name="main_title_initial">Delete the email, please</string>
    <string name="main_title">“Saving the earth”</string>
    <string name="main_plant_number_title">키운 나무 수</string>
    <string name="main_plant_number_format">%d그루</string>
    <string name="main_mail_count_title">현재 메일 개수</string>
    <string name="main_mail_count_format">%d개</string>
    <string name="main_mail_box_manage">메일함 관리</string>
    <string name="main_info_icon">i</string>

    <!-- PlantHistoryFragment -->
    <string name="plant_history_time_format">%s\n~\n%s</string>
    <string name="plant_history_title">캐릭터 히스토리</string>
    <string name="plant_history_go_to_exchange">식물 받으러 가기</string>

    <!-- EditPlantFragment -->
    <string name="edit_plant_finish">변경 완료</string>
    <string name="edit_plant_make_character">내 캐릭터 변경</string>
    <string name="edit_plant_broccoli">브로콜리</string>
    <string name="edit_plant_green_onion">대파</string>
    <string name="edit_plant_tomato">토마토</string>

    <!-- SettingFragment -->
    <string name="setting_title">설정</string>
    <string name="setting_info_notification_menu_title">정보성 푸시 알림</string>
    <string name="setting_info_notification_menu_description">데이터 환경오염을 막는 방법 알려드려요!</string>
    <string name="setting_mail_notification_menu_title">이메일 삭제 알림</string>
    <string name="setting_mail_notification_menu_description">이메일 삭제 알림 개수 설정</string>
    <string name="setting_switch_on">on</string>
    <string name="setting_switch_off">off</string>

    <!-- SettingNotificationFragment -->
    <string name="setting_notification_title">이메일 삭제 알림</string>
    <string name="setting_notification_push_title">푸시 알림</string>
    <string name="setting_notification_count_title">개수 설정</string>
    <string name="setting_notification_complete">설정 완료</string>
    <string name="setting_notification_minus">-</string>
    <string name="setting_notification_plus">+</string>

    <!-- PlantExchangeFragment -->
    <string name="plant_exchange_title">식물 교환</string>
    <string name="plant_exchange_address_title">주소 설정</string>
    <string name="plant_exchange_address_searching">지번, 도로명, 건물명으로 검색</string>
    <string name="plant_exchange_address_location">현재 위치로 설정</string>
    <string name="plant_exchange_possible_number">교환 가능한 채소</string>
    <string name="plant_exchange_broccoli">브로콜리</string>
    <string name="plant_exchange_broccoli_info">브로콜리 설명</string>
    <string name="plant_exchange_green_onion">대파</string>
    <string name="plant_exchange_green_onion_info">대파 설명</string>
    <string name="plant_exchange_tomato">토마토</string>
    <string name="plant_exchange_tomato_info">토마토 설명</string>
    <string name="plant_exchange_delivery">배송하기</string>
    <string name="plant_exchange_location">서울특별시 강남구 테헤란로 152 22층</string>
    //구글 코리아 주소 입니다. 영어 버전에서는 구글 본사 주소 1600 Amphitheatre Parkway Mountain View, CA 94043 USA 쓰면 될 것 같아요!


    <!-- CompleteDialogFragment -->
    <string name="complete_dialog_congratulations">Congratulations!</string>
    <string name="complete_dialog_done">! 다 자랐어요</string>
    <string name="complete_dialog_close">새로 키우기</string>
    <string name="complete_dialog_exchange">식물 교환</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>